@@ -256,7 +256,6 @@
 #define M_SQRT1_2	0.7071067811865475244008443621048490L  /* 1/sqrt(2) */
 #endif
 
->>>>>>> master
 /********************************************/
 /* \name exported functions of config.c     */
 /********************************************/
